<resources>
    <string name="app_name">Unquote</string>
    <string name="submit">Submit</string>
    <string name="questions_remaining">questions remaining</string>
    <string name="num_questions">99</string>
    <string name="quote_image">Quote Image</string>
    <string name="default_question">Famous advice from an iconic mentor. Which fictional character really imparted this bit of sage wisdom?</string>
    <string name="question0">Pretty good advice, and perhaps a scientist did say it… Who actually did?</string>
    <string name="question0_answer0">Albert Einstein</string>
    <string name="question0_answer1">Isaac Newton</string>
    <string name="question0_answer2">Rita Mae Brown</string>
    <string name="question0_answer3">Rosalind Franklin</string>
    <string name="question1">Was honest Abe honestly quoted? Who authored this pithy bit of wisdom?</string>
    <string name="question1_answer0">Edward Stieglitz</string>
    <string name="question1_answer1">Maya Angelou</string>
    <string name="question1_answer2">Abraham Lincoln</string>
    <string name="question1_answer3">Ralph Waldo Emerson</string>
    <string name="question2">Easy advice to read, difficult advice to follow — who actually said it?</string>
    <string name="question2_answer0">Martin Luther King Jr.</string>
    <string name="question2_answer1">Mother Teresa</string>
    <string name="question2_answer2">Fred Rogers</string>
    <string name="question2_answer3">Oprah Winfrey</string>
    <string name="question3">Insanely inspiring, insanely incorrect (maybe). Who is the true source of this inspiration?</string>
    <string name="question3_answer0">Nelson Mandela</string>
    <string name="question3_answer1">Harriet Tubman</string>
    <string name="question3_answer2">Mahatma Gandhi</string>
    <string name="question3_answer3">Nicholas Klein</string>
    <string name="question4">A peace worth striving for — who actually reminded us of this?</string>
    <string name="question4_answer0">Malala Yousafzai</string>
    <string name="question4_answer1">Martin Luther King Jr.</string>
    <string name="question4_answer2">Liu Xiaobo</string>
    <string name="question4_answer3">Dalai Lama</string>
    <string name="question5">Unfortunately, true — but did Marilyn Monroe convey it or did someone else?</string>
    <string name="question5_answer0">Laurel Thatcher Ulrich</string>
    <string name="question5_answer1">Eleanor Roosevelt</string>
    <string name="question5_answer2">Marilyn Monroe </string>
    <string name="question5_answer3">Queen Victoria</string>
    <string name="question0">Pretty good advice, and perhaps a scientist did say it… Who actually did?</string>
</resources>