<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/quote_image" />

    <TextView
        android:id="@+id/num_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/num_questions"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="547dp" />

    <TextView
        android:id="@+id/questions_remaining_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/num_questions"
        app:layout_constraintTop_toTopOf="@id/num_questions"
        app:layout_constraintBottom_toBottomOf="@id/num_questions"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/questions_remaining"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="690dp" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/questions_remaining_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/questions_remaining_text"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/submit"
        style="@style/Widget.AppCompat.Button.Colored"
        tools:layout_editor_absoluteX="341dp"
        tools:layout_editor_absoluteY="694dp" />

    <LinearLayout
        android:id="@+id/bottom_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="275dp">

        <Button
            android:id="@+id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_answers"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="275dp">

        <Button
            android:id="@+id/answer0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:id="@+id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/top_answers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/default_question" />

</androidx.constraintlayout.widget.ConstraintLayout>